[package]
name = "supa_cube_forest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[profile.release]
debug = true

[dependencies]
ndarray = "0.15.6"
ndarray-rand = "0.14.0"
ndarray-stats = "0.5.1"
rand = "0.8.5"
ndarray-npy = "0.8.1"
num = "0.4.3"
conv = "0.3.3"
