[package]
name = "supa_cube_forest"
version = "0.1.0"
edition = "2021"
authors = ["edel-david"] # github name
[lib]
name = "supa_cube_forest"
path = "src/lib.rs"

[[bin]]
name = "test"
path = "src/main.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[profile.release] # for max performance, this lib is small enough that compile-times are not to long.
debug = false # set to true for flamegraph
codegen-units = 1
lto = "fat"


[dependencies]
ndarray = { version = "0.15.6", features = ["rayon"] }
ndarray-rand = "0.14.0"
ndarray-stats = "0.5.1"
rand = "0.8.5"
ndarray-npy = "0.8.1"
num = "0.4.3"
conv = "0.3.3"
rayon = "1.10.0"
lazy_static = "1.4.0"